sass/_marketing-items.scss
.players-marketing-items {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-right: auto;
  margin-left: auto;

  @media screen and (min-width: 600px) {
    gap: 2rem;
    margin-bottom: 1rem;
  }
}

.players-marketing-item {
  display:flex;
  flex-direction: column;
  align-items: center;
  flex: 1 0 100%;

  @media screen and (min-width: 600px) {
    flex: 1 0 45%;
    border-radius: 30px;
    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
    width: 400px;
    margin-right: auto;
    margin-left: auto;
    max-width: 400px;
  }

  @media screen and (min-width: 1220px) {
    padding: 2rem;
    flex: 1 0 28%;
    border-radius: 30px;
  }
  @media screen and (min-width: 1600px) {
    padding: 1rem;
    flex: 1 0 20%;
    border-radius: 30px;
  }

  position: relative;
  min-height: 500px;
  overflow:hidden;

  img {
    width: 100%;
  }
}

.players-marketing-item__image {
  height: 70%;
}

.players-marketing-item__bk {
  background-color: var(--accent-color);
  border-radius: 40px;
  position: absolute;
  top: 30%;
  left: -5px;
  height: 120%;
  width: 110%;
  transform: skew(10deg,-9deg);
}

.players-marketing-item__icon {
  height: 80px;
  width: 80px;
  position: absolute;
  bottom: 55%;
  left: 5px;
  overflow:hidden;

  img {
    height: 100%;
  }
}

.players-marketing-item__heading {
  position: absolute;
  color: #fff;
  font-weight: 900;
  font-size: 1.4rem;
  left: 82px;
  bottom: 57%;
  width: 100%;
  text-align: center;
  max-width: 70%;
}

.players-marketing-item__text {
  position: absolute;
  color: #fff;
  top: 45%;
  width: 100%;
  text-align: center;
  padding: 0 1rem;
  font-size: 1.2rem;

  p {
    line-height: 1.25rem;
  }

  a {
    color: white;
  }

  strong {
    padding: 0.25rem;
    background-color: #ffffff;
    color: var(--accent-color);
    font-weight: normal;
  }
}

.players-club-info {
  position: relative;
  text-align: center;
  color: white;
  max-width: 73rem;
  margin-right: auto;
  margin-left: auto;

  @media screen and (min-width: 600px) {
    margin-bottom: 1rem;
  }

  &__image {
    position: relative;
    min-height: 300px;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    width: 100%;

    &::before {
      position: absolute;
      content: "";
      left: 0;
      right: 0;
      top: 0;
      bottom: 0;
      background-color: #000000;
      z-index: 10;
      opacity: 0.6;
    }
  }

  &__text {
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      color: var(--info-color);
      margin-top: 1rem;
      margin-bottom: 1rem;
    }

    position: relative;
    display: grid;
    place-content: center;
    color: var(--info-color);
    z-index: 10;
    text-shadow: rgb(0, 0, 0) 1px 1px 2px;
    margin: 0 0.5rem;
    font-size: 1.2rem;

    @media screen and (min-width: 768px) {
      padding: 0;
    }

    a {
      color: var(--info-color);
    }

    a:hover {
      text-decoration: none;
    }
  }
}

